--- a/AutoMall/ViewControllers/Upkeep/BaoyangHistoryCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/BaoyangHistoryCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -110,7 +110,13 @@
                     <constraint firstAttribute="bottom" secondItem="62c-Pe-yGw" secondAttribute="bottom" constant="8" id="zmI-tT-1e6"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="-144" y="86"/>
+            <connections>
+                <outlet property="dateL" destination="62c-Pe-yGw" id="gur-7T-U4J"/>
+                <outlet property="lichengL" destination="H0S-pS-Fuv" id="si9-XN-hwP"/>
+                <outlet property="ownerL" destination="yL2-49-5Hs" id="BQm-FS-mGF"/>
+                <outlet property="ranyouL" destination="mtl-NZ-g0C" id="f9j-EQ-iDy"/>
+            </connections>
+            <point key="canvasLocation" x="-155" y="-9"/>
         </tableViewCell>
     </objects>
 </document>
