--- a/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="birthdayTF" destination="EER-RJ-YNF" id="TjX-10-ufW"/>
                 <outlet property="brandTF" destination="UJs-q1-lkf" id="GeE-xm-7hb"/>
+                <outlet property="carImgView" destination="CXO-j3-5pY" id="ubE-eF-rLk"/>
                 <outlet property="engineNoTF" destination="pLB-Qb-syT" id="wgE-4Q-Owf"/>
                 <outlet property="fuelAmountTF" destination="wfu-Uv-do7" id="XA4-UI-TyE"/>
                 <outlet property="genderTF" destination="8io-XW-Jle" id="6r4-hh-2iT"/>
@@ -579,6 +580,13 @@
                                                 <action selector="photoAction:" destination="-1" eventType="touchUpInside" id="fCL-KP-A20"/>
                                             </connections>
                                         </button>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="CXO-j3-5pY" customClass="WPImageView">
+                                            <rect key="frame" x="97.5" y="2" width="50" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="9Ku-De-Vnf"/>
+                                                <constraint firstAttribute="width" constant="50" id="cPh-cW-JO9"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
@@ -589,13 +597,16 @@
                                         <constraint firstItem="X15-V3-f8B" firstAttribute="top" secondItem="VTV-AQ-tef" secondAttribute="top" constant="12" id="2YU-pF-9bM"/>
                                         <constraint firstAttribute="trailing" secondItem="pLB-Qb-syT" secondAttribute="trailing" constant="16" id="2kg-w6-7ij"/>
                                         <constraint firstItem="kpw-Fc-NiV" firstAttribute="leading" secondItem="VTV-AQ-tef" secondAttribute="leading" constant="16" id="2vQ-df-aAf"/>
+                                        <constraint firstItem="CXO-j3-5pY" firstAttribute="top" secondItem="VTV-AQ-tef" secondAttribute="top" constant="2" id="5Ct-OO-OtF"/>
                                         <constraint firstItem="oTc-jZ-umq" firstAttribute="leading" secondItem="KA3-g6-3NS" secondAttribute="trailing" constant="8" id="5HS-zC-Koq"/>
+                                        <constraint firstItem="SKL-wa-gZZ" firstAttribute="top" secondItem="CXO-j3-5pY" secondAttribute="bottom" constant="2" id="7Ti-D8-vm8"/>
                                         <constraint firstItem="kpw-Fc-NiV" firstAttribute="top" secondItem="SKL-wa-gZZ" secondAttribute="bottom" constant="44" id="7wi-Cz-J4x"/>
                                         <constraint firstItem="Yw7-ol-MFR" firstAttribute="top" secondItem="ULV-fQ-0h2" secondAttribute="bottom" constant="12" id="88m-PR-dn1"/>
                                         <constraint firstItem="JFq-D4-C4R" firstAttribute="top" secondItem="pnI-kI-v77" secondAttribute="bottom" constant="12" id="AaZ-uL-fNm"/>
                                         <constraint firstAttribute="trailing" secondItem="wJk-nc-K4W" secondAttribute="trailing" id="B8B-Up-bzs"/>
                                         <constraint firstAttribute="trailing" secondItem="lyp-LV-Ekj" secondAttribute="trailing" constant="8" id="CjV-I2-YeA"/>
                                         <constraint firstItem="JFq-D4-C4R" firstAttribute="leading" secondItem="VTV-AQ-tef" secondAttribute="leading" constant="16" id="EDH-aR-7eh"/>
+                                        <constraint firstItem="CXO-j3-5pY" firstAttribute="leading" secondItem="X15-V3-f8B" secondAttribute="trailing" constant="20" id="EtM-j8-sJ1"/>
                                         <constraint firstItem="SKL-wa-gZZ" firstAttribute="leading" secondItem="VTV-AQ-tef" secondAttribute="leading" id="FAa-cz-Z00"/>
                                         <constraint firstAttribute="trailing" secondItem="oTc-jZ-umq" secondAttribute="trailing" constant="16" id="FBa-YH-5NU"/>
                                         <constraint firstItem="oTc-jZ-umq" firstAttribute="leading" secondItem="KA3-g6-3NS" secondAttribute="trailing" constant="8" id="Fty-6F-0xm"/>
@@ -677,10 +688,11 @@
                 <constraint firstItem="Anl-hI-GET" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="p8F-hO-0hv"/>
                 <constraint firstAttribute="bottom" secondItem="wOe-7V-F6I" secondAttribute="bottom" id="sci-Fk-Fy2"/>
             </constraints>
-            <point key="canvasLocation" x="-787" y="173"/>
+            <point key="canvasLocation" x="-787.5" y="172.5"/>
         </view>
     </objects>
     <resources>
+        <image name="default" width="512" height="512"/>
         <image name="photoBtn" width="20" height="20"/>
     </resources>
 </document>
